# Album-Management-System

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Group Members.txt  LICENSE  README.md  RELEASE.md  config.json  main.cpp  manager.cpp  manager.h  populate_sample_data.cpp  run_tests.bat  tasks.md  temp_populate.cpp  test_album.cpp  test_artist.cpp  test_data_integrity.cpp  test_integration.cpp  test_repository.cpp  test_suite.ps1  test_tasks.md  test_validation.cpp  version.h  version.h.in
.github/workflows/: ci.yml
backups/: index.csv
docs/: API_REFERENCE.md  DeveloperGuide.md  Packaging.md  UserManual.md
scripts/: package_linux.sh  package_windows.ps1
